add background color

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>Web Development</title>
+        <style>
+            body {
+                background-color: #F3EFE0;
+            }
+        </style>
     </head>
     <body>
         <center>
