hr color changed

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
             body {
                 background-color: #F3EFE0;
             }
+            hr {
+                background-color: #000000;
+            }
+
         </style>
     </head>
     <body>
