Add link tag in html

--- a/index.html
+++ b/index.html
@@ -3,15 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Web Development</title>
-        <style>
-            body {
-                background-color: #F3EFE0;
-            }
-            hr {
-                background-color: #000000;
-            }
-
-        </style>
+        <link rel="stylesheet" href="CSS/styles.css">
     </head>
     <body>
         <center>
@@ -29,12 +21,12 @@
             <h6>Heading level 6 &lth6&gt</h6>
         </center>
         <br>
-        <hr size="4" noshade>
+        <hr>
 
         <!-- Break Line  -->
         <h1><u><b>Break Line &ltbr&gt</b></u></h1>
         "br" tag is used to break the lines
-        <hr size="4" noshade>
+        <hr>
 
         <!-- Horizontal Rule  -->
         <h1><u><b>Horizontal rule &lthr&gt</b></u></h1>
@@ -49,7 +41,7 @@
             <li>width</li>
             <li>shade, noshade</li>
         </ul>
-        <hr size="4" noshade>
+        <hr>
 
         <!-- List  -->
         <h1><u><b>Ordered List &ltol&gt</b></u></h1>
@@ -96,7 +88,7 @@
         </p>
 
         <!-- Host Images  -->
-        <hr size="4" noshade>
+        <hr>
         <h1><u><b>Image Insert &ltimg&gt</b></u></h1>
         <p>
             With this tag, we can insert image in out HTML file
@@ -145,7 +137,7 @@
         </p>
 
         <!-- Anchor  -->
-        <hr size="4" noshade>
+        <hr>
         <h1><u><b>Anchor Element&lta&gt</b></u></h1>
         <p>
             The <strong>&lta&gt</strong> HTML element, with its <strong>href</strong>
@@ -172,7 +164,7 @@
             <li><strong>type: </strong> Hints at the linked URL's format with a
                 <b>MIME type</b>. no built-in functionality</li>
         </ul>
-        <hr size="4" noshade>
+        <hr>
         <!-- Table  -->
         <h1><u><b>Table&lttable&gt</b></u></h1>
         <p>
@@ -202,7 +194,7 @@
         </ul>
 
         <!-- form  -->
-        <hr size="4" noshade>
+        <hr>
         <h1><u><b>Form Element &ltform&gt</b></u></h1>
         <p>
             This HTML element provides a document section which contain
@@ -284,7 +276,53 @@
                 </li>
             </ol>
         </p>
-        <hr size="4" noshade>
+        <hr>
+        <h1><strong><u>Link &ltlink&gt</u></strong></h1>
+        <p>
+            This tag is used to define relationship between the current document
+            and an external resource. Most often it is used to link to external
+            style sheets or to add a favicon to your website.
+            <br>
+            e.g. &ltlink rel="stylesheet" href="CSS/styles.css"&gt
 
+        </p>
+        <h3>Attributes</h3>
+        <ul>
+            <li>
+                <strong>rel:</strong>It is required. Specifies the relationship
+                between the current document and the linked document
+                <h4>Values</h4>
+                <ol>
+                    <li><strong>alternate</strong></li>
+                    <li><strong>author</strong></li>
+                    <li><strong>dns-prefetch</strong></li>
+                    <li><strong>help</strong></li>
+                    <li><strong>icon</strong></li>
+                    <li><strong>license</strong></li>
+                    <li><strong>next</strong></li>
+                    <li><strong>pingback</strong></li>
+                    <li><strong>preconnect</strong></li>
+                    <li><strong>prefetch</strong></li>
+                    <li><strong>preload</strong></li>
+                    <li><strong>prerender</strong></li>
+                    <li><strong>prev</strong></li>
+                    <li><strong>search</strong></li>
+                    <li><strong>stylesheet</strong></li>
+                </ol>
+            </li>
+            <li><strong>sizes: </strong>Specifies the size of the linked
+                resources. Only for rel="icon"</li>
+            <li><strong>href: </strong>Specifies the location of the linked
+                document</li>
+            <li><strong>title: </strong>Defines a preferred or an alternate
+                stylesheet</li>
+        </ul>
+        <hr>
+        <!-- <h1><strong><u>CSS</u></strong></h1>
+        <p>
+            Cascading Style Sheets is a style sheet language used for describing
+            the presentation of a document written in a markup language such as
+            HTML or XML.
+        </p> -->
     </body>
 </html>
