Add new Webpage

--- a/index.html
+++ b/index.html
@@ -1,328 +1,66 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>Web Development</title>
-        <link rel="stylesheet" href="CSS/styles.css">
-    </head>
-    <body>
-        <center>
-            <h1><u>Web Development</u></h1>
-        </center>
-        <!-- Heading  -->
-        <h1><u><b>Heading &lth1&gt</b></u></h1>
-        There are different levels in heading
-        <center>
-            <h1>Heading level 1 &lth1&gt</h1>
-            <h2>Heading level 2 &lth2&gt</h2>
-            <h3>Heading level 3 &lth3&gt</h3>
-            <h4>Heading level 4 &lth4&gt</h4>
-            <h5>Heading level 5 &lth5&gt</h5>
-            <h6>Heading level 6 &lth6&gt</h6>
-        </center>
-        <br>
-        <hr>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <title>Shouvik Sutar</title>
+    <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="icon" href="Images/favicon.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link
+      rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link
+      href="https://fonts.googleapis.com/css2?family=Chivo+Mono:wght@100&family=Philosopher&family=Sacramento&display=swap"
+      rel="stylesheet">
+  </head>
+  <body>
+    <div class="top-container">
+      <img class="top-cloud" src="Images/cloud.png" alt="cloud"
+        height="80px"> <br>
+      <h1>I'm Shouvik</h1>
+      <p class="para-first">A <span class="pro">pro</span>gramming learner</p>
+      <img src="Images/mountains.jpg" alt="mountains" height="400px"> <br>
+      <img class="bottom-cloud" src="Images/cloud.png" alt="cloud"
+        height="80px">
+    </div>
+    <hr>
+    <div class="middle-container">
+      <div class="profile">
+        <img class="profile-img" src="Images/denji2.png" alt="">
+        <h2>Hello.</h2>
+        <p>My name is Shouvik. Currently I'm working on Web development. I'm
+          also interested in Desktop app development.</p>
+      </div>
+      <hr>
+      <div class="skills">
+        <h2>My Skills.</h2>
+        <div class="skill-row">
+          <img class="skills-img" src="Images/denji.png" alt="">
 
-        <!-- Break Line  -->
-        <h1><u><b>Break Line &ltbr&gt</b></u></h1>
-        "br" tag is used to break the lines
-        <hr>
+          <h3>C/C++</h3>
+          <p>I've learnt <strong> C/C++ </strong>. </p>
+        </div>
+        <div class="skill-row">
+          <img class="skills-img" src="Images/sword.png" alt="">
+          <h3>HTML</h3>
+          <p>Currently I'm learning <em>Web Development</em> so <strong>HTML</strong> is also being done in this session of course</p>
+        </div>
+      </div>
+      <hr>
+      <div class="contact-me">
+        <h2>Get In Touch</h2>
+        <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+        <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales,
+          tellus donec dui, ornare erat.</p>
+        <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+      </div>
+    </div>
 
-        <!-- Horizontal Rule  -->
-        <h1><u><b>Horizontal rule &lthr&gt</b></u></h1>
-        <em><strong>
-                We created Horizontal rule using "hr" tag <br>
-            </strong></em>
-        It has 5 attributes.<br>
-        <ul>
-            <li>size</li>
-            <li>align</li>
-            <li>color</li>
-            <li>width</li>
-            <li>shade, noshade</li>
-        </ul>
-        <hr>
 
-        <!-- List  -->
-        <h1><u><b>Ordered List &ltol&gt</b></u></h1>
-        <p>
-            To create Ordered lists in HTML, we use "ol" tag.
-            <br>
-            <strong>It has some attributes</strong>
-            <h3>Attributes</h3>
-            <ul>
-                <li><strong>reveresed: </strong>It specifies that the list's
-                    items are in reverse order</li>
-                <li><strong>start: </strong>it is used to define a starting
-                    number to start the list from</li>
-                <li><strong>type: </strong>It sets the numbering types
-                    <ol>
-                        <li>"a" for lowercase letters</li>
-                        <li>"A" for uppercase letters</li>
-                        <li>"i" for lowercase Roman numerals</li>
-                        <li>"I" for uppercase Roman numerals</li>
-                        <li>"1" for numbers</li>
-                    </ol>
-                </li>
 
-            </ul>
-        </p>
-        <h1><u><b>Unordered List &ltul&gt</b></u></h1>
-        <p>
-            To create Unordered lists in HTML, we use "ul" tag.
-            <br>
-            <strong>It has some attributes</strong>
-            <h3>Attributes</h3>
-            <ul>
-                <li><strong>compact: </strong>The list should be rendered in a
-                    compact style</li>
-                <li><strong>type: </strong>This attribute sets the bulltet style
-                    for the list
-                    <ol>
-                        <li>circle</li>
-                        <li>disk</li>
-                        <li>square</li>
-                    </ol>
-                </li>
-            </ul>
-        </p>
+    <div class="last-container">
+      <a class="footer-link" href="https://www.linkedin.com/shouvik-sutar">LinkedIn</a>
+      <a class="footer-link" href="https://twitter.com/">Twitter</a>
+      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+      <p>© 2022 Shouvik Sutar.</p>
+    </div>
 
-        <!-- Host Images  -->
-        <hr>
-        <h1><u><b>Image Insert &ltimg&gt</b></u></h1>
-        <p>
-            With this tag, we can insert image in out HTML file
-            <h3>Attributes</h3>
-            <ul>
-                <li><strong>src: </strong>The Image URL In this tag, there can
-                    be an address of an image. The address can be local address
-                    or web address</li>
-                <li><strong>width: </strong>The intrinsic width of the image in
-                    pixels. Must be an integer without a unit.</li>
-                <li><strong>heigth: </strong>The intrinsic height of the image,
-                    in pixels. Must be an integer without a unit.</li>
-                <li><strong>alt: </strong> Defines an alternative text
-                    description of the image</li>
-                <li><strong>border: </strong>The width of a border around the
-                    image. Can be used border in CSS properties</li>
-                <li>
-                    <strong>align: </strong>Aligns the image with its
-                    surrounding context
-                    <br><b>Allowed values: </b>
-                    <ol>
-                        <li><strong>top: </strong>Equivalent to vertical-align:
-                            top or vertical-align: text-top </li>
-                        <li><strong>middle: </strong>Equivalent to
-                            vertical-align: -moz-middle-with-baseline</li>
-                        <li><strong>bottom: </strong>The default, equivalent to
-                            vertical-align: unset or vertical-align: initial</li>
-                        <li><strong>left: </strong>Equivalent to float: left</li>
-                        <li><strong>right: </strong>Equivalent to float: right</li>
-                    </ol>
-                </li>
-                <li>
-                    <strong>decoding: </strong> Provides an image decoding hint
-                    to the browser. Allowed values:
-                    <ol>
-                        <li><strong>sync: </strong>Decode the image
-                            synchronously,
-                            for atomic presentation with other content.</li>
-                        <li><strong>async: </strong>Decode the image
-                            asynchronously, to reduce delay in presenting other
-                            content.</li>
-
-                    </ol>
-                </li>
-            </ul>
-        </p>
-
-        <!-- Anchor  -->
-        <hr>
-        <h1><u><b>Anchor Element&lta&gt</b></u></h1>
-        <p>
-            The <strong>&lta&gt</strong> HTML element, with its <strong>href</strong>
-            attribute, creates a hyperlink
-            to web pages, files, email addresses, locations in the same page, or
-            anything else a URL can address
-        </p>
-        <h3>Attributes</h3>
-        <ul>
-            <li>
-                <strong>href: </strong>The URL that the hyperlink points to.
-                Links are not restricted to HTTP-based URLs--They can use any
-                URL scheme supported by browsers:
-                <ol>
-                    <li>Sections of page with fragment URLs</li>
-                    <li>Pieces of media files with media fragments</li>
-                    <li>Telephone numbers with <strong>tel:</strong> URLs</li>
-                    <li>Email addresses with <strong>mailto:</strong></li>
-                </ol>
-            </li>
-            <li><strong>ping: </strong> A space-separated list of URLs. When the
-                link is followed, the browser will send POST requests with the
-                body <i>PING</i> to the URLs. Typically for tracking</li>
-            <li><strong>type: </strong> Hints at the linked URL's format with a
-                <b>MIME type</b>. no built-in functionality</li>
-        </ul>
-        <hr>
-        <!-- Table  -->
-        <h1><u><b>Table&lttable&gt</b></u></h1>
-        <p>
-            This tag is used to create table in HTML. It has various attributes
-        </p>
-        <h3>Attributes</h3>
-        <ul>
-            <li><strong>align</strong><ol>
-                    <li><strong>left: </strong>the table is displayed on the
-                        left side of the document</li>
-                    <li><strong>center: </strong>the table is displayed on the
-                        center of the document</li>
-                    <li><strong>left: </strong>the table is displayed on the
-                        right side of the document</li>
-                </ol>
-            </li>
-            <li><strong>bgcolor: </strong>The background color of the table.
-                It's a <i>6 digit hexadecimal RGB code, prefixed by a <b>#</b></i></li>
-            <li><strong>border: </strong>This integer attribute defines, in
-                pixels, the size of the frame surrounding the table.</li>
-            <li><strong>summery</strong>This attribute defines an alternative
-                text that summarizes the content of the table.</li>
-            <li><strong>cellspacing: </strong>This attribute do the size
-                adjustments of the space between two cells in a percentage value
-                or pixels. This attribute is applied both horizontally and
-                vertically</li>
-        </ul>
-
-        <!-- form  -->
-        <hr>
-        <h1><u><b>Form Element &ltform&gt</b></u></h1>
-        <p>
-            This HTML element provides a document section which contain
-            interactive controls for submitting Information
-
-        </p>
-        <h3>Attributes</h3>
-        <ul>
-            <li><strong>name: </strong>The name of the form. The value must not
-                be the empty string, and must be unique among the form elements
-                in the forms collection that it is in.</li>
-            <li>
-                <strong>action: </strong>It does some action when the <i>submit</i>
-                key is pressed.
-                <strong>
-                    <br>
-                    e.g -</strong>&ltform action="index.html"&gt can take you
-                back to the <i>index.html</i> page of your website, &ltform
-                action="mailto:(email_address)"&gt can take you to the email
-                after pressing the submit button.
-            </li>
-            <li>
-                <strong>enctype: </strong> If the value of the method attribute
-                is <i>post</i>, <i>enctype</i> is the MIME (<strong>Multipurpose
-                    Internet Mail Extensions</strong>) type of the form
-                submission.
-                <br>
-                <u><i>Types of enctype</i>:</u>
-                <ol>
-                    <li><strong>application/x-www-form-urlencoded: </strong> It
-                        is the default value</li>
-                    <li><strong>text/plain: </strong> It prints the input values
-                        as plain text.</li>
-                    <li><strong>multipart/form-date: </strong> Use this if the
-                        form contains &ltinput&gt elements with the <strong>type=file</strong></li>
-                </ol>
-            </li>
-        </ul>
-        <h3>Methods</h3>
-        <p>
-            <ol>
-                <li><strong>&ltlabel&gt:</strong> It is used to print some text.</li>
-                <li>
-                    <strong>&ltinput&gt:</strong>
-                    This tag is used to take input from the user.
-                    <p>
-                        <h4><u>&ltinput&gt attributes: </u></h4>
-                        <ul>
-                            <li>
-                                <strong>type:</strong>
-                                <br>
-                                <i>Different types</i>
-                                <ul>
-                                    <li><strong>text: </strong> This attribute
-                                        is used inside label to take text
-                                        inputs.</li>
-                                    <li><strong>email: </strong> This attribute
-                                        is used to take input email addresses</li>
-                                    <li><strong>submit: </strong> Using this
-                                        attribute a button appears. With it we
-                                        can perform submit or whatever task we
-                                        program.</li>
-                                    <li><strong>password: </strong> With this
-                                        tag we can input password. This tag
-                                        takes a masked input to avoid the
-                                        password get leaked.</li>
-                                    <li><strong>checkbox: </strong>This gives us
-                                        a <i>checkbox</i> to check it.</li>
-                                    <li><strong>radio: </strong>This gives us a
-                                        radio button to select some option.</li>
-                                    <li><strong>color: </strong>It takes colors
-                                        as input.</li>
-                                    <li><strong>date: </strong>This attribute
-                                        gives us a calender to enter any date.</li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </p>
-                </li>
-            </ol>
-        </p>
-        <hr>
-        <h1><strong><u>Link &ltlink&gt</u></strong></h1>
-        <p>
-            This tag is used to define relationship between the current document
-            and an external resource. Most often it is used to link to external
-            style sheets or to add a favicon to your website.
-            <br>
-            e.g. &ltlink rel="stylesheet" href="CSS/styles.css"&gt
-
-        </p>
-        <h3>Attributes</h3>
-        <ul>
-            <li>
-                <strong>rel:</strong>It is required. Specifies the relationship
-                between the current document and the linked document
-                <h4>Values</h4>
-                <ol>
-                    <li><strong>alternate</strong></li>
-                    <li><strong>author</strong></li>
-                    <li><strong>dns-prefetch</strong></li>
-                    <li><strong>help</strong></li>
-                    <li><strong>icon</strong></li>
-                    <li><strong>license</strong></li>
-                    <li><strong>next</strong></li>
-                    <li><strong>pingback</strong></li>
-                    <li><strong>preconnect</strong></li>
-                    <li><strong>prefetch</strong></li>
-                    <li><strong>preload</strong></li>
-                    <li><strong>prerender</strong></li>
-                    <li><strong>prev</strong></li>
-                    <li><strong>search</strong></li>
-                    <li><strong>stylesheet</strong></li>
-                </ol>
-            </li>
-            <li><strong>sizes: </strong>Specifies the size of the linked
-                resources. Only for rel="icon"</li>
-            <li><strong>href: </strong>Specifies the location of the linked
-                document</li>
-            <li><strong>title: </strong>Defines a preferred or an alternate
-                stylesheet</li>
-        </ul>
-        <hr>
-        <!-- <h1><strong><u>CSS</u></strong></h1>
-        <p>
-            Cascading Style Sheets is a style sheet language used for describing
-            the presentation of a document written in a markup language such as
-            HTML or XML.
-        </p> -->
-    </body>
+  </body>
 </html>
