--- a/index.html
+++ b/index.html
@@ -31,25 +31,30 @@
       <hr>
       <div class="skills">
         <h2>My Skills.</h2>
-        <div class="skill-row" >
+        <div class="skill-row">
           <img class="skills-img1" src="Images/denji.png" alt="">
 
           <h3>C/C++</h3>
-          <p class="skills-cpp-description">I've learnt <strong> C/C++</strong>. Trying to make a train app with it.</p>
+          <p class="skills-cpp-description">I've learnt <strong> C/C++</strong>.
+            Trying to make a train app with it.</p>
         </div>
         <div class="skill-row">
           <img class="skills-img2" src="Images/sword.png" alt="">
           <h3>HTML</h3>
-          <p class="skills-html-description">Currently I'm learning <em>Web Development</em> so <strong>HTML</strong> is also being done in this session of course</p>
+          <p class="skills-html-description">Currently I'm learning <em>Web
+              Development</em> so <strong>HTML</strong> is also being done in
+            this session of course</p>
         </div>
-      </div>
+      </div> <br> <br>
       <hr>
-      <div class="contact-me">
-        <h2></h2>
-        <h3></h3>
-        <p></p>
-        <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
-      </div>
+      <center>
+        <div class="contact-me">
+          <h2></h2>
+          <h3></h3>
+          <p></p>
+          <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+        </div>
+      </center>
     </div>
 
 
@@ -58,7 +63,7 @@
       <a class="footer-link" href="https://www.linkedin.com/shouvik-sutar">LinkedIn</a>
       <a class="footer-link" href="https://twitter.com/en_zeon">Twitter</a>
       <a class="footer-link" href="https://github.com/Student9876">Github</a>
-      <p>© 2022 Shouvik Sutar.</p>
+      <p class="copyright">© 2022 Shouvik Sutar.</p>
     </div>
 
   </body>
