--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
       <img src="Images/mountains.jpg" alt="mountains" height="400px"> <br>
       <img class="bottom-cloud" src="Images/cloud.png" alt="cloud"
         height="80px">
+      <hr>
     </div>
-    <hr>
     <div class="middle-container">
       <div class="profile">
         <img class="profile-img" src="Images/denji2.png" alt="">
         <h2>Hello.</h2>
-        <p>My name is Shouvik. Currently I'm working on Web development. I'm
+        <p class="intro">My name is Shouvik. Currently I'm working on Web development. I'm
           also interested in Desktop app development.</p>
       </div>
       <hr>
@@ -65,6 +65,5 @@
       <a class="footer-link" href="https://github.com/Student9876">Github</a>
       <p class="copyright">© 2022 Shouvik Sutar.</p>
     </div>
-
   </body>
 </html>
