--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <h2></h2>
           <h3></h3>
           <p></p>
-          <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+          <a class="btn" href="mailto:shouvik9876@email.com">CONTACT ME</a>
         </div>
       </center>
     </div>
